kubernetes/testlab/apps/snapdrop/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snapdrop
spec:
  ingressClassName: traefik
  rules:
    - host: snapdrop.testlab.theforce.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: snapdrop
                port:
                  number: 10215
